--- a/JavascriptCommon/TestBinarySearch/TestBinarySearch.html
+++ b/JavascriptCommon/TestBinarySearch/TestBinarySearch.html
@@ -7,12 +7,12 @@
   <title>Test BinarySearch()</title>
   <meta charset="utf-8" />
   <meta name="description" content="Custom Javascript BinarySearch{} Method" />
-  <meta name="keywords" content="Javascript, BinarySearch()" />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
-  <script src="LJCCommon.js" type="text/javascript"></script>
-  <script src="ItemTemplate.js" type="text/javascript"></script>
-  <script src="ItemsTemplate.js" type="text/javascript"></script>
+  <script src="../ArgError.js" type="text/javascript"></script>
+  <script src="../LJCCommon.js" type="text/javascript"></script>
+  <script src="Item.js" type="text/javascript"></script>
+  <script src="Items.js" type="text/javascript"></script>
   <script>
     let items = new Items();
     items.Add("C");
