--- a/JavascriptCommon/Logon/Logon.html
+++ b/JavascriptCommon/Logon/Logon.html
@@ -23,7 +23,7 @@
           style="margin: auto; width: 237px">
       <div class="table">
         <div class="row">
-          <div class="cellLeft">
+          <div class="cellFirst">
             <label for="UserName">User Name</label>
           </div>
           <!-- name attribute must be used to appear in "get" URL. -->
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="cellLeft">
+          <div class="cellFirst">
             <label for="AccessCode">AccessCode</label>
           </div>
           <div class="cell">
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="cellLeft">
+          <div class="cellFirst">
           </div>
           <div class="cell">
             <input type="submit" value="Submit" />
