--- a/JavascriptCommon/TestBinarySearch/TestHTMLForm.html
+++ b/JavascriptCommon/TestBinarySearch/TestHTMLForm.html
@@ -33,7 +33,7 @@
     <div class="table"
          style="border: 1px solid red">
       <div class="row">
-        <div class="cellLeft">
+        <div class="cellRightAlign">
           <label for="TextValue">Text Value</label>
         </div>
         <div class="cell">
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="cellLeft">
+        <div class="cellRightAlign">
           <label for="TextValue">Another Value</label>
         </div>
         <div class="cell">
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="cellLeft"></div>
+        <div class="cellRightAlign"></div>
         <div class="cell">
           <button type="button" name="OKButton">
             What?
