--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -25,7 +25,7 @@
        style="text-align: center">
     <div class="table">
       <div class="row">
-        <div class="cellLeft">
+        <div class="cellFirst">
           <label for="text">Template</label>
         </div>
         <div class="cell">
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="cellLeft">
+        <div class="cellFirst">
           <textarea id="template" name="template" rows="1"
                     autofocus spellcheck="false"
                     class="text"></textarea>
