--- a/JavascriptCommon/TextGen/TextGenForm.html
+++ b/JavascriptCommon/TextGen/TextGenForm.html
@@ -27,7 +27,7 @@
     <form id="form" class="form">
       <div class="table">
         <div class="row">
-          <div class="cellFirst">
+          <div class="label">
             <label for="text">Template</label>
           </div>
           <div class="cell">
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="cellFirst">
+          <div class="label">
             <textarea id="template" name="template" rows="1"
                       autofocus spellcheck="false"
                       class="text"></textarea>
