--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -17,8 +17,9 @@
   <script src="Script/RepeatItems.js"></script>
   <script src="Script/Replacements.js"></script>
   <script src="Script/Sections.js"></script>
+  <script src="Script/TextData.js"></script>
   <script src="Script/TextGen.js"></script>
-  <script src="Script/TestData.js"></script>
+  <script src="Script/TextUtil.js"></script>
 </head>
 <body>
   <div id="page" class="page"
@@ -64,57 +65,16 @@
         let css = getComputedStyle(page, "width");
         width = parseInt(css.width, 10);
       }
-      //ShowWidths(page);
-      //ShowWidths(table);
       let cellPadding = 6;
       width -= cellPadding;
-      TextGen.SetTextCols(null, width);
-    }
-
-    function ShowWidths(eItem)
-    {
-      let text = `id: ${eItem.id}\r\n`;
-      let css = getComputedStyle(eItem, null);
-      let marginLeft = parseInt(css.marginLeft, 10);
-      let marginRight = parseInt(css.marginRight, 10);
-      let borderLeft = parseInt(css.borderLeft, 10);
-      let borderRight = parseInt(css.borderRight, 10);
-      let totalWidth = eItem.clientWidth + marginLeft + marginRight;
-      totalWidth += borderLeft + borderRight;
-      text += `TotalWidth: ${totalWidth}\r\n`;
-      text += "\r\n";
-
-      text += `clientWidth - style.marginLeft - style.marginRight\r\n`;
-      text += `clientWidth - style.borderLeft - style.borderRight\r\n`;
-      text += `clientWidth: ${eItem.clientWidth}\r\n`;
-      //text += `offsetWidth: ${eItem.offsetWidth}\r\n`;
-      //text += `scrollWidth: ${eItem.scrollWidth}\r\n`;
-
-      text += `style.marginLeft: ${css.marginLeft}\r\n`;
-      text += `style.marginRight: ${css.marginRight}\r\n`;
-      text += "\r\n";
-
-      text += `style.borderLeft: ${css.borderLeft}\r\n`;
-      text += `style.borderRight: ${css.borderRight}\r\n`;
-      text += "\r\n";
-
-      //text += `style.offset: ${css.offset}\r\n`;
-      text += `style.paddingLeft: ${css.paddingLeft}\r\n`;
-      text += `style.paddingRight: ${css.paddingRight}\r\n`;
-      text += "\r\n";
-
-      text += `clientWidth - style.paddingLeft - style.paddingRight\r\n`
-      let width = parseInt(css.width, 10);
-      width = Math.floor(width);
-      text += `style.width: ${width}\r\n`;
-      alert(text);
+      TextUtil.SetTextCols(null, width);
     }
 
     // Event handler to process the template and data.
     function Process()
     {
       let templateText = template.value;
-      sections = TestData.SectionsData();
+      sections = TextData.SectionsData();
       let lines = templateText.split("\n");
       let textGen = new TextGen();
       textGen.TextGen(sections, lines);
