--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -72,6 +72,8 @@
   </div>
 
   <script>
+    gDataDisplay = "none";
+    gGenDisplay = "none";
     TextGenPage.SetEvents();
     TextGenPage.PageTextCols();
     outputText = "";
